# auto-insurance-diagnosis

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  streamlit_app.py
backend/configs/: config.yaml
backend/scripts/: evaluate_engine.py  train_baseline.py  train_diagnosis.py  train_gbm.py
backend/src/auto_insurance/: config.py  pipeline.py
backend/src/auto_insurance/calibration/: kosis.py  raking.py
backend/src/auto_insurance/data/: load.py  split.py
backend/src/auto_insurance/diagnosis/: engine.py  rules.py
backend/src/auto_insurance/evaluation/: calibration.py  metrics.py
backend/src/auto_insurance/features/: encode.py
backend/src/auto_insurance/models/: gbm.py  glm.py  weights.py
backend/tests/: test_app.py  test_calibration.py  test_engine.py  test_mitigation.py  test_smoke.py  test_train_baseline.py  test_train_gbm.py  test_weights.py
docs/: architecture.md  frontend-tech-review.md  statistics-feature-review.md  uml.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: diagnose.js
frontend/src/components/: CohortCompare.jsx  DriverForm.jsx  EdaPanel.jsx  MarketHistogram.jsx  PercentileGauge.jsx  ReportCard.jsx  ShapChart.jsx
